Flere sonarfikser til regelrepo (#383)
* Flere sonarfikser til regelrepo

* Testfiks