@@ -36,7 +36,7 @@ class FastsettAndelTilFordeling extends LeafSpecification<BeregningsgrunnlagPeri
         List<BeregningsgrunnlagPrArbeidsforhold> ikkeFastsattAf = arbeidsforholdene.stream()
             .filter(af -> af.getMaksimalRefusjonPrÅr() != null)
             .filter(af -> af.getAvkortetRefusjonPrÅr() == null)
-            .collect(Collectors.toList());
+            .toList();
         if (ikkeFastsattAf.isEmpty()) {
             return resultat;
         }
