@@ -83,7 +83,7 @@ public class FastsettStatusOgAndelPrPeriodeFRISINN extends LeafSpecification<Akt
     private List<AktivPeriode> hentAktivePerioderPåSkjæringtidspunkt(LocalDate dato, List<AktivPeriode> aktivePerioder) {
         return aktivePerioder.stream()
             .filter(ap -> ap.getPeriode().getFom().isBefore(dato))
-            .filter(ap -> ap.inneholder(dato)).collect(Collectors.toList());
+            .filter(ap -> ap.inneholder(dato)).toList();
     }
 
 
